--- a/DeepLearning.AI TensorFlow Developer/IntroductiontoTensorFlow/Exercise2_Handwriting_Recognition_Solution.ipynb
+++ b/DeepLearning.AI TensorFlow Developer/IntroductiontoTensorFlow/Exercise2_Handwriting_Recognition_Solution.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/DhilipSanjay/AI-ML-DL/blob/main/Exercise2_Handwriting_Recognition_Solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/DhilipSanjay/AI-ML-DL/blob/main/DeepLearning.AI%20TensorFlow%20Developer/IntroductiontoTensorFlow/Exercise2_Handwriting_Recognition_Solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
